--- a/HealthChecks.Extensions.AzureSearch/HealthChecks.Extensions.AzureSearch.csproj
+++ b/HealthChecks.Extensions.AzureSearch/HealthChecks.Extensions.AzureSearch.csproj
@@ -4,6 +4,15 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PackageId>HealthChecks.Extensions.AzureSearch</PackageId>
+    <Version>0.0.1</Version>
+    <Authors>aimenux</Authors>
+    <Company>home</Company>
+    <PackageTags>Microsoft.Extensions.Diagnostics.HealthChecks;Microsoft Azure Search</PackageTags>
+    <Description>This library provides heathchecks extensions on azure search cognitive service</Description>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Search" Version="10.1.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
