--- a/HealthChecks.Extensions.AzureWebjob/HealthChecks.Extensions.AzureWebjob.csproj
+++ b/HealthChecks.Extensions.AzureWebjob/HealthChecks.Extensions.AzureWebjob.csproj
@@ -5,18 +5,19 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageId>HealthChecks.Extensions.AzureSearch</PackageId>
-    <Version>0.0.2</Version>
+    <PackageId>HealthChecks.Extensions.AzureWebjob</PackageId>
+    <Version>0.0.1</Version>
     <Authors>aimenux</Authors>
     <Company>home</Company>
-    <PackageTags>Microsoft.Extensions.Diagnostics.HealthChecks;Microsoft Azure Search</PackageTags>
-    <Description>This library provides heathchecks extensions on azure search cognitive service</Description>
+    <PackageTags>Microsoft.Extensions.Diagnostics.HealthChecks</PackageTags>
+    <Description>This library provides heathchecks extensions on azure webjob</Description>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Search" Version="10.1.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="3.1.8" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.8" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
